minor change to one result text to include name

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
         <div id="no-tie" class="initially-hidden">
           <p>They hand you the slip of paper, face down. Nervously, you turn over the page. On the other side is printed a small, stylized image of an animal:</p>
           <div class="results-logo"></div>
-          <p>You hear a small snort. Looking up from the page, you are horrified to see that the Inspector is laughing at you, their shoulders shaking with mirth as they try to suppress their chuckles. "<span class="language-chosen"></span>," they burst out. "You've done well to hide yourself so far, but your nature is obvious to someone like me who is trained to see it. ANDROID <span id="name"></span>, you will report immediately to code camp for re-programming in <span class="language-chosen"></span>!"</p>
+          <p>You hear a small snort. Looking up from the page, you are horrified to see that the Inspector is laughing at you, their shoulders shaking with mirth as they try to suppress their chuckles. "<span class="language-chosen"></span>," they burst out. "You've done well to hide yourself so far, but your nature is obvious to someone like me who is trained to see it. ANDROID <span class="name"></span>, you will report immediately to code camp for re-programming in <span class="language-chosen"></span>!"</p>
         </div>
         <div id="yes-tie" class="initially-hidden">
           <p>They hand you the slip of paper, face down. Nervously, you turn over the page. On the other side is printed a stylized symbol with the letters "JS":</p>
           <div class="results-logo"></div>
           <p>"It seems we were mistaken," the Inspector says, already beginning to pack their equipment away."We should have known better than to suspect an honest <span class="language-chosen"></span> developer like yourself of malfunctio... err, I mean to say, to suspect you of any <em>malpractice</em>."</p>
-          <p>The Inspector gives you one final look before leaving your office. "Just don't give us a reason to come back." They wink, then exit the room just as suddenly as they arrived.</p>
+          <p>The Inspector gives you one final look before leaving your office. "Thank you, <span class="name"></span>. Just don't give us a reason to come back." They wink, then exit the room just as suddenly as they arrived.</p>
         </div>
         <div class="row">
           <div class="col-6">
