add readme to README.md

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <button type="button" class="btn btn-secondary btn-block">Accept your fate.</button>
           </div>
           <div class="col-6">
-            <button type="button" class="btn btn-secondary btn-block">No! There's been a mistake! Restart the simulation!</button>
+            <button type="button" id="startover" class="btn btn-secondary btn-block">No! There's been a mistake! Restart the simulation!</button>
           </div>
         </div>
       </div>
