--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class = "jumbotron">
-
+      <h1>Programming Language Suggester</h1>
     </div>
     <form id="quiz-form">
       <!-- this stops enter from submitting form early-->
@@ -21,7 +21,7 @@
           <label for="nameEntry">Please enter your name to begin:</label>
           <input type="text" id="nameEntry">
         </div>
-        <button type="button" class="btn btn-secondary btn-block next-question">Begin simulation.</button>
+        <button type="button" class="btn btn-dark btn-block next-question">Begin simulation.</button>
       </div>
 
       <div class="initially-hidden" id="question1">
@@ -42,7 +42,7 @@
             </div>
           </div>
         </div> 
-        <button type="button" class="btn btn-secondary btn-block next-question first-question">Next</button>
+        <button type="button" class="btn btn-dark btn-block next-question first-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question2">
@@ -71,7 +71,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary btn-block next-question">Next</button>
+        <button type="button" class="btn btn-dark btn-block next-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question3">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary btn-block next-question">Next</button>
+        <button type="button" class="btn btn-dark btn-block next-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question4">
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary btn-block next-question">Next question</button>
+        <button type="button" class="btn btn-dark btn-block next-question">Next question</button>
       </div>
       
       <div class="initially-hidden" id="question5">
@@ -143,7 +143,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-secondary btn-block next-question">Answer and await your fate.</button>
+        <button type="submit" class="btn btn-dark btn-block next-question">Answer and await your fate.</button>
       </div>
 
       <div class="initially-hidden" id="results-panel">
@@ -161,10 +161,10 @@
         </div>
         <div class="row">
           <div class="col-6">
-            <button type="button" class="btn btn-secondary btn-block">Accept your fate.</button>
+            <button type="button" class="btn btn-dark btn-block">Accept your fate.</button>
           </div>
           <div class="col-6">
-            <button type="button" id="startover" class="btn btn-secondary btn-block">No! There's been a mistake! Restart the simulation!</button>
+            <button type="button" id="startover" class="btn btn-dark btn-block">No! There's been a mistake! Restart the simulation!</button>
           </div>
         </div>
       </div>
