make 'accept your fate' link to suggested language webpage

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="row">
           <div class="col-6">
-            <button type="button" class="btn btn-dark btn-block">Accept your fate.</button>
+            <a href="#" target="blank" class="btn btn-dark btn-block">Accept your fate.</a>
           </div>
           <div class="col-6">
             <button type="button" id="startover" class="btn btn-dark btn-block">No! There's been a mistake! Restart the simulation!</button>
